/**
 * Licensed to the Apache Software Foundation (ASF) under one
 * or more contributor license agreements.  See the NOTICE file
 * distributed with this work for additional information
 * regarding copyright ownership.  The ASF licenses this file
 * to you under the Apache License, Version 2.0 (the
 * "License"); you may not use this file except in compliance
 * with the License.  You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

option java_package = "org.apache.tajo.rpc.protocolrecords";
option java_outer_classname = "PrimitiveProtos";
option java_generic_services = true;
option java_generate_equals_and_hash = true;

import "errors.proto";
import "stacktrace.proto";

message StringProto {
	required string value = 1;
}

message IntProto {
	required int32 value = 1;
}

message LongProto {
	required int64 value = 1;
}

message BoolProto {
	required bool value = 1;
}

message NullProto {
}

message StringListProto {
  repeated string values = 1;
}

message KeyValueProto {
  required string key = 1;
  required string value = 2;
}

message KeyValueSetProto {
  repeated KeyValueProto keyval = 1;
}

message ReturnState {
  required tajo.error.ResultCode return_code  = 1;
  optional string message = 2;
  optional tajo.error.StackTrace stack_trace  = 3;
}

message StringListResponse {
  required ReturnState state = 1;
  repeated string values = 2;
}

message KeyValueSetResponse {
  required ReturnState state = 1;
  optional KeyValueSetProto value = 2;
}

message StringResponse {
  required ReturnState state = 1;
  optional string value = 2;
}
